Fixed alignment issues in draft & application filter (#1992)
* Fixed alignment issues in draft & application filter

* updated

--- a/forms-flow-web/src/components/ServiceFlow/list/search/TaskSearchBarListView.scss
+++ b/forms-flow-web/src/components/ServiceFlow/list/search/TaskSearchBarListView.scss
@@ -4,7 +4,7 @@
         position: absolute;
         z-index: 1000;
         background-color: var(--color-white);
-        top: 31px;;
+        top: 37px;;
         min-width: 180px;
     }
     .sort-container{
